# Lustra

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run-clang-tidy.sh
LustraEngine/: CMakeLists.txt
LustraEngine/src/: App.cpp  App.h  ArgBuilderDXC.h  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetRegistry.h  Graphics.cpp  Graphics.h  GraphicsUtils.cpp  GraphicsUtils.h  LustraPaths.h  LustraVulkan.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  ResourceTag.h  SDLAssert.h  Shader.cpp  Shader.h  ShaderCompilerDXC.cpp  ShaderCompilerDXC.h  ShaderCompilerShared.h  ShaderImporter.cpp  ShaderImporter.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
LustraEngine/src/shaders/hlsl/: FSTest.hlsl  VSTest.hlsl
LustraLib/: CMakeLists.txt
LustraLib/include/LustraLib/: Assert.h  Logger.h  LustraLib.h  Utils.h
LustraLib/src/: Logger.cpp  Utils.cpp
Run/Assets/Shaders/hlsl/: VSTest.hlsl
